--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Personal Portfolio Website</title>
     <!----CSS link----->
-    <link rel="stylesheet" href="resume.css" />
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <div class="hero">
@@ -17,12 +17,12 @@
           <li><a href="#">Blog</a></li>
           <li><a href="#">Contact</a></li>
         </ul>
-        <a href="#" class="btn">Resume</a>
+        <a href="resume.html" class="btn">Resume</a>
       </nav>
 
       <div class="content">
         <span class="title">Software Developer - Environment Climate Change Canada</span>
-        <h1>Hello, I’m Vishal. <span>Scroll To Find Out Moress</span></h1>
+        <h1>Hello, I’m Vishal, a third-year computer science student at the University of Ottawa.<span>Click on a tab above to discover more about me!</span></h1>
         <p>
           
         </p>
