--- a/public/Projects.html
+++ b/public/Projects.html
@@ -9,9 +9,15 @@
         <h1>My Projects</h1>
         <div class ="project">
             <h2>Trivia App</h2>
-            <img src="./img/Image.png" class="Image" />
+            <video controls src="IMG_0887.mov" width="720" height="400"></video>
             <div class ="discription">
-                <li><b>Languages Used:</b> React, HypeScript, Html, CSS</li>
+                <ul>
+                    <li><b>Languages Used:</b> React, HypeScript, Html, CSS</li>
+                    <li>-Retrieved sets of trivia questions from Open Trivia API asynchronously with React’s useEffect hook</li>
+                    <li>-Used Figma to prototype the website and design UI mockups</li>
+                    <li>-Implemented a filtering system that specifies the amount, category, difficulty and type of questions</li>
+                    <li>-Designed and implemented custom button animations using CSS transitions</li>
+                </ul>
         
             </div>
         </div>
