--- a/public/index.html
+++ b/public/index.html
@@ -9,24 +9,20 @@
   <body>
     <div class="hero">
       <nav>
-        <img src="./img/logo.png" class="logo" />
         <ul>
           <li><a href="#">Home</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Blog</a></li>
-          <li><a href="#">Contact</a></li>
+          <li><a href="Projects.html">Projects</a></li>
         </ul>
         <a href="resume.html" class="btn">Resume</a>
       </nav>
-
+      <img src="IMG_0677.png" class="Picture" width="360" height="360" />
       <div class="content">
+       
         <span class="title">Software Developer - Environment Climate Change Canada</span>
         <h1>Hello, I’m Vishal, a third-year computer science student at the University of Ottawa.<span>Click on a tab above to discover more about me!</span></h1>
         <p>
-          
+
         </p>
-        <a href="#" class="btn">Download CV</a>
       </div>
     </div>
   </body>
